app/assets/stylesheets/pages/innovation_playlist.scss
.playlist-container {
  padding-top: $nav-height;
  background: #1e2428;
  text-align: left;
  min-height: 100%;
}

body {
}

.playlist-index-wrapper {
  text-align: left;
  padding: 40px;
}

.playlist-title {
  font-family: "Montserrat Regular", montserrat, sans-serif;
  text-transform: uppercase;
  color: white;
  font-size: 3em;
}

.playlist-description {
  font-family: "Montserrat Light Italic", montserrat, sans-serif;
  font-size: 1.2em;
  color: #d2d2d2;
}

.playlist-caps-text {
  font-family: "Montserrat Medium", montserrat, sans-serif;
  text-transform: uppercase;
  color: #b0d4ed;
  font-size: 1em;
  margin: 10px 0;
}

.playlist-chapter-title {
  font-size: 3em;
}

.playlist-chapter-header {
  padding: 30px;
  p {
    font-family: "Montserrat Light", montserrat, sans-serif;
    color: #d2d2d2;
    margin-bottom: 20px;
  }
}

.playlist-chapter-wrapper {
  @include larger-than(large) {
    .playlist-top-button-container {
      position: absolute;
      right: 40px;
      top: 70px;
      display: flex;
      flex-direction: column;
      flex-wrap: wrap;
      .playlist-top-button {
        display: block;
        width: 100%;
      }
    }
  }
}

.playlist-index-wrapper {
  .playlist-top-button-container {
  }
}

.playlist-top-button-container {
  display: block;
  margin: 35px 0;
}

.playlist-top-button {
  display: block;
  min-width: 200px;
  margin-bottom: 20px;
  @include larger-than(medium) {
    display: inline;
  }
  flex-basis: 100%;
  margin-right: 10px;
  color: #d2d2d2 !important;
  text-align: center;
  padding: 5px 15px;
  font-family: "Montserrat Light", montserrat, sans-serif;
  width: 20%;
  font-size: 1.1em !important;
  border: 3px solid #d2d2d2;
  text-decoration: none !important;
}

.playlist-tab-container {
  display: flex;
  align-items: stretch;
  width: 100%;
}

.playlist-tab {
  white-space: nowrap;
  overflow: hidden;
  border: 1px solid #4C778F;
  p {
    text-overflow: ellipsis;
    font-family: "Montserrat Medium", montserrat, sans-serif;
    display: inline;
    color: #b0d4ed;
  }
  img {
    width: 20px;
    margin-right: 10px;
  }
  @include smaller-than(medium) {
    p {
      display: none !important;
    }
  }
  flex: 1;
  margin-left: -1px;
  text-align: center;
  display: inline-block;
  cursor: pointer;
  text-overflow: ellipsis;
  height: 50px;
  background: #3F4856;
  padding: 20px 0;
  &:hover {
    p {
      color: white !important;
    }
  }
  &.selected {
    background: #2b353b;
    border-bottom: none !important;
    p {
      color: white !important;
    }
  }
}

.playlist-content-act {
  a {
    color: #b0d4ed;
    text-decoration: underline;
    -webkit-transition: transform .5s;
    transition: transform .5s;
    &:hover {
      opacity: 0.8;
    }
  }
  display: none;
}

.act-image {
  max-width: 500px;
  width: 100%;
}


.playlist-content-container {
  background: #2C353C;
  height: 100%;
  padding: 30px;
}

.playlist-content {
  h2 {
    font-family: "Montserrat Regular", montserrat, sans-serif;
    margin: 20px 0;
  }
  p {
    font-family: "Montserrat Light", montserrat, sans-serif;
  }
}

.playlist-chapter-title {
  font-family: "Montserrat Medium", montserrat, sans-serif;
  font-size: 2em;
  color: white;
}

.playlist-transport-container {
  display: flex;
  align-items: stretch;
  width: 100%;
  background: #1e2428;
}

.playlist-transport-item {
  flex: 1;
  display: inline-block;
  text-align: center;
  padding: 10px 0;
  &:hover {
    background: #3e4956;
  }
}

.playist-chapters-container {
  overflow: auto;
}

.playlist-track {
  display: block;
  margin-bottom: 30px;
  cursor: pointer;
  -webkit-transition: 1s;
  &:hover {
    opacity: 0.5;
  }
  p {
    font-family: "Montserrat Regular", montserrat, sans-serif;
  }

  .playlist-grid-image {
    width: 100%;
  }

  .playlist-description {
    font-size: 1.2em;
    padding: 10px 0;
  }

}

.icon-watch {
  background-image:
  url("/playlist/icons/watch.png");
}

.watch-image {
}

